build(scripts/build-android): Use JDK8 from Android Studio (get, PATH); scrap JDK9 workaround